--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -3,9 +3,9 @@ global
 defaults
     log     global
     mode    tcp
-    timeout connect 5000
-    timeout client  50000
-    timeout server  50000
+    timeout connect 3000
+    timeout client  5000
+    timeout server  5000
 
 frontend mysql_ha
     bind *:3306
@@ -14,7 +14,20 @@ frontend mysql_ha
     backlog 4096
     maxconn 50000
     default_backend mysql_backends
-
+    
+listen 0.0.0.0:8080
+    mode http
+    stats enable
+    stats uri /
+    stats realm Strictly\ Private
+    stats auth admin:12345
+    
+listen mysql-cluster
+    bind *:3306
+    mode tcp
+    option mysql-check user haproxy_check
+    balance roundrobin
+    
 backend mysql_backends
     mode tcp
     option log-health-checks
