--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -3,18 +3,11 @@ global
 defaults
     log     global
     mode    tcp
+    retries 2
     timeout connect 3000
     timeout client  5000
     timeout server  5000
-
-frontend mysql_ha
-    bind *:3306
-    mode tcp
-    timeout client 3600s
-    backlog 4096
-    maxconn 50000
-    default_backend mysql_backends
-    
+ 
 listen 0.0.0.0:8080
     mode http
     stats enable
@@ -27,11 +20,3 @@ listen mysql-cluster
     mode tcp
     option mysql-check user haproxy_check
     balance roundrobin
-    
-backend mysql_backends
-    mode tcp
-    option log-health-checks
-    balance roundrobin
-    timeout connect 5s
-    timeout queue 10s
-    timeout server 3600s
