--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -20,4 +20,4 @@ listen mysql-cluster
     bind *:3306
     mode tcp
     option mysql-check user haproxy_check
-    balance roundrobin
+    balance leastconn
