--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -19,5 +19,5 @@ listen 0.0.0.0:8080
 listen mysql-cluster
     bind *:3306
     mode tcp
-    option mysql-check user cattle
+    option mysql-check user haproxy_check
     balance leastconn
