--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -18,6 +18,8 @@ listen 0.0.0.0:8080
     
 listen mysql-cluster
     bind *:3306
+    timeout client  10800s
+    timeout server  10800s
     mode tcp
     option mysql-check user haproxy_check
     balance leastconn
