--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -22,4 +22,4 @@ listen mysql-cluster
     timeout server  10800s
     mode tcp
     option mysql-check user haproxy_check
-    balance leastconn
+    balance first
